# AutoDepDataTree

./: CMakeLists.txt  README.md
src/: Data.cpp  Data.h  HierNode.cpp  HierNode.h  main.cpp
tests/: ProcessTreeDemo.cpp  ProcessTreeDemo.h
